2002-02-23  HIDAI Ken-ichi <hidai@nmn.jp>

	* [w3m-dev 03060] doc-jp/README.migemo
	* doc-jp/README.migemo: added

2002-02-23  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03059] table + hborder + rowspan + valign=bottom
	* table.c (renderTable): add case BORDER_NOWIN:

2002-02-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03057] Re: Bug#134350: w3m: Forgets (http auth) login information upon reload (or almost anything else)
	* etc.c (find_auth): add `file'
			check file as well
	* etc.c (find_auth_cookie): add `file'
	* etc.c (add_auth_cookie): add `file'
	* file.c (AuthBasicCred): add "Basic "
	* file.c (AuthDigestCred): add "Digest "
	* file.c (getAuthCookie): if h_auth == NULL, get recorded cookie
	* file.c (get_auth_cookie): get recorded cookie
	* file.c (loadGeneralFile): don't clear add_auth_cookie_flag 
				by redirection
		add_auth_cookie if authorization is required and passed 
	* fm.h (auth_cookie): add file
	* ftp.c (openFTP): follow change auth_cookie
	* proto.h (get_auth_cookie): added
	* proto.h (find_auth_cookie): add `file'
	* proto.h (add_auth_cookie): add `file'
	* url.c (openURL): get_auth_cookie

2002-02-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03058] mailer
	* NEWS: rc: mailer
	* fm.h (Mailer): change default
	* main.c (MAIN): $MAILER will be used as "mailer"
	* main.c (followA): if "mailer" defined & simple mailto: URL, 
		use mailer instead of w3mmail.cgi
	* main.c (cmd_loadURL): ditto
	* rc.c (params6): remove ifndef USE_W3MMAILER

2002-02-15  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03056] DISPLAY_IMAGE, STOP_IMAGE don't work.
	* main.c (dispI): fix DISPLAY_IMAGE
	* main.c (stopI): fix STOP_IMAGE

2002-02-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03055] LIB_DIR -> w3m_lib_dir()
	* image.c (getCharSize): s/LIB_DIR/w3m_lib_dir()/
	* image.c (openImgdisplay): ditto
	* image.c (getImageSize): ditto

2002-02-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
